@@ -2633,6 +2633,7 @@ scripts_iheader=Script install options
 scripts_iname=Script to install
 scripts_idesc=Script description
 scripts_iuses=Programming language
+scripts_isite=Original website
 scripts_iuses_perl=Perl
 scripts_iuses_php=PHP
 scripts_iuses_ruby=Ruby on Rails
@@ -2667,7 +2668,7 @@ scripts_ustart=Start Rails Server
 scripts_etitle=Manage Script
 scripts_uheader=Details of installed script
 scripts_iinfo=Installation details
-scripts_iurl=Web URL
+scripts_iurl=Installed URL
 scripts_itime=Installed on
 scripts_idir=Installation directory
 scripts_idb=Uses database
@@ -2725,6 +2726,7 @@ scripts_perlmod=Installing Perl module $1 from CPAN ..
 scripts_eperlmod=.. CPAN failed! See the error message above for details
 scripts_installgem=Installing Ruby Gems package ..
 scripts_mmax=(At most $1)
+scripts_sitelink=More information on using this script can be found at <a href='$1' target=_new>$1</a>.
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations. The following substitions can be used in the message body and subject:
