@@ -774,3 +774,4 @@ Both the maximum and minimum versions for scripts can now be selected on the glo
 Added the --user and --all-domains parameters to list-scripts.pl, list-users.pl, list-aliases.pl and list-simple-aliases.pl, to list objects in multiple domains.
 ---- Changes since 3.49 ----
 When used, the ClamAV server clamd can be stopped and started from the system information page, just like MySQL and Apache.
+Added the original website URLs for all script installers, displayed on the installation form and on the page showing details of an installed script.
